# Real-time-Kitsune-PCA

./: AfterImage.py  AfterImage_extrapolate.c  AfterImage_extrapolate.pyx  FeatureExtractor.py  Identifying_Network_Scans.ipynb  Kitsune.py  LICENSE  README.md  Refactored metrics.py  chunk_processor.py  chunked_kitsune.py  example.py  feature_attention.py  mirai_small.pcap  mirai_small.pcap.tsv  netStat.py  pyproject.toml  realtime_data_simulator.py  requirements.txt  setup.py  slicing_pcap.ipynb
KitNET/: KitNET.py  corClust.py  dA.py  utils.py
test folder/: Readme.md  Readme.txt  attack_boundaries_(test).py  parallel_kitsune_(test).py  pcap_analyzer_(test).py  pcap_attack_analyzer_(test).py  plot(time)_(test).py  plot(time)v2_(test).py  plotting (packet index)_(test).py  rmse_(test).ipynb  save_results_(test).py  simple_test.py  simple_test_run.mprof  simulated_data_for_test.tsv  test_chunked.py  test_multiprocessing.py  test_parallel.py  test_traffic_log.csv
