[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.24"]
build-backend = "setuptools.build_meta"

[project]
name = "kitsune-ids"
version = "1.0.0"
description = "Kitsune: An Ensemble of Autoencoders for Online Network Intrusion Detection"
readme = "README.md"
authors = [
    {name = "Yisroel Mirsky", email = "yisroel@post.bgu.ac.il"}
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scapy>=2.4.5",
    "matplotlib>=3.4.0",
    "scikit-learn>=0.24.0",
    "Cython>=0.29.24",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]

[project.urls]
Homepage = "https://github.com/ymirsky/Kitsune-py"
Documentation = "https://github.com/ymirsky/Kitsune-py/wiki"
Repository = "https://github.com/ymirsky/Kitsune-py.git"
"Bug Tracker" = "https://github.com/ymirsky/Kitsune-py/issues"

[tool.setuptools]
packages = ["kitsune"]

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 